-Add temp.js file for future experimnetation with importing variables across diff JS files. -Change some CSS styles. -Edit certain consts & vars

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -21,6 +21,10 @@ body {
 .navbar-nav li a{
   color: #D6E4E5;
 }
+.navbar-brand{
+  font-family: Montserrat;
+  font-size: 3rem;
+}
 .navbar-nav li a:hover {
   background-color: #6D9886;
   color: #EB6440 !important;
