--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,4 +1,4 @@
 <%- include("partials/header") %>
-<p> <%= aboutContent %> </p>
-
+<h2>A Little Something On What This Is...</h2>
+<%- include("partials/temporarystates")%>
 <%- include("partials/footer") %>
