--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,7 @@
 <%- include("partials/header"); %>
 
-<h1>Welcome to the Home Page</h1>
-<p> <%= homeStartingContent %> </p>
+<h1>Welcome to Lone_52.</h1>
+<h4> <%= homeStartingContent %> </h4>
 
 <%posts.forEach(function(post){ %>
 <h2> <%= post.TITLE %> </h2>
