--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,24 +3,29 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Daily Journal</title>
+  <title>LONE_52</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <!-- GOOGLE FONTS HERE -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Abyssinica+SIL&family=Kalam:wght@300&family=Lato&family=Montserrat:wght@400;900&family=Roboto&display=swap" rel="stylesheet">
+  <!-- CSS LINKING HERE -->
   <link rel="stylesheet" href="/css/styles.css">
 </head>
-  <nav class="navbar">
-    <div class="container">
-      <div class="navbar-header">
-        <p class="navbar-brand">DAILY JOURNAL</p>
-      </div>
-        <ul class="nav navbar-nav navbar-right">
-          <!-- 6 -->
-          <li id="home"><a href="/">HOME</a></li>
-          <li id="about"><a href="/about">ABOUT US</a></li>
-          <li id="contact"><a href="/contact">CONTACT US</a></li>
-        </ul>
+<nav class="navbar">
+  <div class="container">
+    <div class="navbar-header">
+      <p class="navbar-brand">LONE_52</p>
     </div>
-  </nav>
+    <ul class="nav navbar-nav navbar-right">
+      <!-- 6 -->
+      <li id="home"><a href="/">HOME</a></li>
+      <li id="about"><a href="/about">ABOUT US</a></li>
+      <li id="contact"><a href="/contact">CONTACT US</a></li>
+    </ul>
+  </div>
+</nav>
 
-  <body>
-    <div class="container">
+<body>
+  <div class="container">
