--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,5 +1,5 @@
 <%- include("partials/header") %>
 
- <p> <%=contactContent%> </p>
+ <h3> <%=contactContent%> </h3>
 
 <%- include("partials/footer") %>
