--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,5 +1,39 @@
 <%- include("partials/header") %>
 
- <h3> <%=contactContent%> </h3>
+<h3> <%=contactContent%> </h3>
+
+<div class="container-fluid">
+  <form id="contact-form" name="contact-form" action="mail.php" method="POST">
+    <!--Grid row-->
+
+      <div>
+        <label for="name" class="">Your name</label>
+        <input type="text" id="name" name="name" class="form-control">
+      </div>
+      <!--Grid column-->
+
+      <div>
+        <label for="email" class="">Your email</label>
+        <input type="text" id="email" name="email" class="form-control">
+      </div>
+
+
+    <div >
+      <label for="subject" class="">Subject</label>
+      <input type="text" id="subject" name="subject" class="form-control">
+    </div>
+
+    <div >
+      <label for="message">Your message</label>
+      <textarea type="text" id="message" name="message" rows="2" class="form-control md-textarea"></textarea>
+    </div>
+
+  </form>
+  <div>
+    <a class="btn emailButton" onclick="document.getElementById('contact-form').submit();">Send</a>
+  </div>
+  <div class="status"></div>
+  </div>
+
 
 <%- include("partials/footer") %>
