Fix passing post bug

--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,6 +1,6 @@
 <%- include("partials/header") %>
 
-<h2> <%= thisPost.TITLE %> </h2>
-<p> <%= thisPost.CONTENT %></p>
+<h2> <%= title %> </h2>
+<p> <%= content %></p>
 
 <%- include("partials/footer") %>
